--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   },
   "devDependencies": {
     "@snowpack/plugin-typescript": "^1.2.1",
+    "@types/dom-mediacapture-transform": "^0.1.3",
+    "@types/dom-webcodecs": "^0.1.4",
     "@types/webmidi": "^2.0.6",
     "snowpack": "^3.8.8",
     "typescript": "^4.5.2"
